--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-snap-carousel": "^3.8.11",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.1.3"
   },
   "private": true
