--- a/eas.json
+++ b/eas.json
@@ -6,19 +6,34 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "android": {}
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
+      },
+      "android": {}
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "ios": {
+        "enterpriseProvisioning": "adhoc"
+      },
+      "android": {}
     },
-    "apk": { 
-      "distribution": "internal"
+    "apk": {
+      "distribution": "internal",
+      "android": {}
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {}
+    }
   }
 }
