--- a/app.json
+++ b/app.json
@@ -22,13 +22,11 @@
       },
       "package": "genfiit.application"
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
     "extra": {
       "eas": {
         "projectId": "a4d4711d-e10a-49e5-a61b-90d624e3cbef"
-      }
+      },
+      "apiUrl": "https://api-production.example.com"
     }
   }
 }
