--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "2.7.5",
@@ -20,29 +21,40 @@
     "async-storage": "^0.1.0",
     "axios": "^1.7.7",
     "expo": "~51.0.39",
+    "expo-asset": "~10.0.10",
+    "expo-blur": "~13.0.2",
     "expo-checkbox": "~3.0.0",
     "expo-dev-client": "~4.0.29",
+    "expo-file-system": "~17.0.1",
     "expo-linear-gradient": "~13.0.2",
+    "expo-media-library": "~16.0.5",
     "expo-status-bar": "~1.12.1",
     "jimp-compact": "^0.16.1-2",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-canvas": "^0.1.40",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-htmlview": "^0.17.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^15.10.1",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.8.6",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-canvas": "^0.1.14",
     "@types/react-native-htmlview": "^0.16.5",
     "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-native-vector-icons": "^6.4.18",
