--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "expo-file-system": "~17.0.1",
     "expo-linear-gradient": "~13.0.2",
     "expo-media-library": "~16.0.5",
+    "expo-print": "~13.0.1",
+    "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "jimp-compact": "^0.16.1-2",
     "react": "18.2.0",
