--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-svg": "^15.10.1",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.19.10",
     "react-native-webview": "13.8.6",
     "uuid": "^11.0.3"
